# JVMMonitor

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  build.bat  build.sh
agent/: CMakeLists.txt
agent/include/: asgct.h
agent/include/jvmmon/: agent.h  alarm_engine.h  class_analyzer.h  class_histo.h  classloader_tracker.h  cpu_sampler.h  crash_handler.h  exception_tracker.h  finalizer_tracker.h  gc_detail.h  gc_listener.h  jit_tracker.h  jmx_reader.h  lock_monitor.h  log.h  memory_monitor.h  module_registry.h  native_mem.h  network_monitor.h  os_metrics.h  platform.h  protocol.h  ring_buffer.h  safepoint_tracker.h  string_table.h  thread_cpu.h  thread_monitor.h  transport.h
agent/include/win32/: jni_md.h
agent/src/: agent.c  alarm_engine.c  class_analyzer.c  class_histo.c  classloader_tracker.c  cpu_sampler.c  crash_handler.c  exception_tracker.c  finalizer_tracker.c  gc_detail.c  gc_listener.c  jit_tracker.c  jmx_reader.c  lock_monitor.c  log.c  memory_monitor.c  module_registry.c  native_mem.c  network_monitor.c  os_metrics.c  platform_linux.c  platform_win32.c  protocol.c  ring_buffer.c  safepoint_tracker.c  string_table.c  thread_cpu.c  thread_monitor.c  transport.c
agent/test/: test_main.c
collector/: pom.xml
collector/src/main/java/it/denzosoft/javadecompiler/: BatchDecompiler.java  DecompilationException.java  DecompilerLimits.java  Main.java  (+2 more)
docs/: CLI-Manual.md  Debugging-Guide.md  Demo-Guide.md  GUI-Manual.md  Monitoring-Guide.md  Performance-Optimization-Guide.md  Troubleshooting-Guide.md  WebProbe-Guide.md
java-agent/: pom.xml
(+286 files in other folders)
